# pytest-tips-and-tricks

./: README.md  demos.ipynb
code/: conftest.py  pytest.ini  pytest.toml  requirements.txt  rpncalc.ini
code/basic/: failure_demo.py  ipytest_setup.py  test_approx.py  test_calc.py  test_capturing.py  test_introspection.py  test_raises.py  test_traceback.py
code/fixtures/: pathlib_configparser.py  test_autouse.py  test_builtin_capfd.py  test_builtin_caplog.py  test_builtin_capsys.py  test_builtin_capsys_capfd.py  test_builtin_monkeypatch.py  test_builtin_request_markers.py  test_builtin_tmp_path.py  test_fixture.py  test_fixture_finalizer.py  test_fixture_param.py  test_fixture_scope.py  test_fixture_scope_reset.py  test_fixtures_using_fixtures.py  test_parametrize_indirect.py  test_request.py  test_usefixtures.py  test_yield_fixture.py
code/fixtures/cli_opt/: conftest.py
code/hooks/yaml/: conftest.py  pyproject.toml  setup.py  test_calc.yml
code/marking/: skip_xfail.py  test_marking.py  test_parametrization.py  test_parametrization_dataclass.py  test_parametrization_marks.py  test_skip_xfail.py  test_subtests.py
code/mocking/: test_fake.py  test_fake_mock.py  test_real.py
code/plugins/: test_asyncio.py  test_hypothesis.py  test_hypothesis_rpncalc_v1.py  test_hypothesis_rpncalc_v2.py  test_hypothesis_rpncalc_v3.py  test_snapshot.py
code/plugins/coverage/: cov.py  (+2 more)
code/rpncalc/: convert.py  rpn_v1.py  rpn_v2.py  rpn_v3.py  test_rpn_errors.py  test_rpn_v1.py  test_rpn_v2.py  test_utils.py  utils.py
demos/: ep2024.html  ep2024.ipynb  pyconde26-workshop.ipynb
(+17 files in other folders)
